--- a/app/views/user/my_messages.html.erb
+++ b/app/views/user/my_messages.html.erb
@@ -2,7 +2,9 @@
 	<div class="waperbg">
 		<div class="container">
 			<div class="row">
-				<%=render "left_nav" %>
+				<div class="col-md-3">
+					<%=render "left_nav" %>
+				</div>
 				<div class="col-md-9 main">
 					<div class="row">
 						<div class="col-md-5"><hr class="divider"></div>
