--- a/app/views/user/my_courses.html.erb
+++ b/app/views/user/my_courses.html.erb
@@ -5,27 +5,87 @@
       <%=render "left_nav" %>
       </div>
       <div class="col-md-9 right_nav_c">
-      <% 9.times do %>
-    <div class="col-sm-4 courses_tent">
-      <div class="bordered">
-        <%= link_to course_path(1) do %>
-          <%= image_tag("course-index.gif", class: "img-responsive")%>
-          <%= image_tag("course-teacher.png", class: "img-responsive avatar")%>
-          <span class="pull-right name">沈晴天</span>
-          <div class="col-sm-12 mt-40">
-            <p>操作系统和虚拟化安全</p>
-            <p>沈晴天，博士， 副教授。北京大学牛逼学院...</p>
+        <div class="my-nav">
+          <ul class="nav nav-tabs" role="tablist">
+            <li role="presentation" class="active"><a href="#collect" aria-controls="collect" role="tab" data-toggle="tab">已收藏</a></li>
+            <li role="presentation"><a href="#study" aria-controls="study" role="tab" data-toggle="tab">已学习</a></li>
+            <li role="presentation"><a href="#complete" aria-controls="complete" role="tab" data-toggle="tab">已完成</a></li>
+          </ul>
+        </div>
+
+        <div class="tab-content">
+          <div role="tabpanel" class="tab-pane active" id="collect">
+            <% 9.times do %>
+              <div class="col-sm-4 courses_tent">
+                <div class="bordered">
+                  <%= link_to course_path(1) do %>
+                    <%= image_tag("course-index.gif", class: "img-responsive")%>
+                    <%= image_tag("course-teacher.png", class: "img-responsive avatar")%>
+                    <span class="pull-right name">沈晴天</span>
+                    <div class="col-sm-12 mt-40">
+                      <p>操作系统和虚拟化安全</p>
+                      <p>沈晴天，博士， 副教授。北京大学牛逼学院...</p>
+                    </div>
+                    <div class="col-sm-12 infos">
+                      <span class="glyphicon glyphicon-eye-open"></span> 1549
+                      &nbsp;&nbsp;&nbsp;
+                      <span class="glyphicon glyphicon-time"></span> 5月14日 17:30
+                      <b class="pull-right">免费</b>
+                    </div>
+                  <% end %>
+                </div>
+              </div>
+            <% end %>
           </div>
-          <div class="col-sm-12 infos">
-            <span class="glyphicon glyphicon-eye-open"></span> 1549
-            &nbsp;&nbsp;&nbsp;
-            <span class="glyphicon glyphicon-time"></span> 5月14日 17:30
-            <b class="pull-right">免费</b>
+
+          <div role="tabpanel" class="tab-pane" id="study">
+            <% 4.times do %>
+              <div class="col-sm-4 courses_tent">
+                <div class="bordered">
+                  <%= link_to course_path(1) do %>
+                    <%= image_tag("course-index.gif", class: "img-responsive")%>
+                    <%= image_tag("course-teacher.png", class: "img-responsive avatar")%>
+                    <span class="pull-right name">沈晴天</span>
+                    <div class="col-sm-12 mt-40">
+                      <p>操作系统和虚拟化安全</p>
+                      <p>沈晴天，博士， 副教授。北京大学牛逼学院...</p>
+                    </div>
+                    <div class="col-sm-12 infos">
+                      <span class="glyphicon glyphicon-eye-open"></span> 1549
+                      &nbsp;&nbsp;&nbsp;
+                      <span class="glyphicon glyphicon-time"></span> 5月14日 17:30
+                      <b class="pull-right">免费</b>
+                    </div>
+                  <% end %>
+                </div>
+              </div>
+            <% end %>
           </div>
-        <% end %>
-      </div>
-    </div>
-    <% end %>
+
+          <div role="tabpanel" class="tab-pane" id="complete">
+            <% 3.times do %>
+              <div class="col-sm-4 courses_tent">
+                <div class="bordered">
+                  <%= link_to course_path(1) do %>
+                    <%= image_tag("course-index.gif", class: "img-responsive")%>
+                    <%= image_tag("course-teacher.png", class: "img-responsive avatar")%>
+                    <span class="pull-right name">沈晴天</span>
+                    <div class="col-sm-12 mt-40">
+                      <p>操作系统和虚拟化安全</p>
+                      <p>沈晴天，博士， 副教授。北京大学牛逼学院...</p>
+                    </div>
+                    <div class="col-sm-12 infos">
+                      <span class="glyphicon glyphicon-eye-open"></span> 1549
+                      &nbsp;&nbsp;&nbsp;
+                      <span class="glyphicon glyphicon-time"></span> 5月14日 17:30
+                      <b class="pull-right">免费</b>
+                    </div>
+                  <% end %>
+                </div>
+              </div>
+            <% end %>
+          </div>
+        </div>
       </div>
     </div>
   </div>
