--- a/app/assets/stylesheets/application/user.scss
+++ b/app/assets/stylesheets/application/user.scss
@@ -1,7 +1,7 @@
 // Place all the styles related to the user controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
-.user__my_informations{
+.user__my_informations, .user__show, .user__update {
 	.my-nav{
     background-color:#fff;
 		margin-top: 40px;
