--- a/app/assets/stylesheets/application/share.scss
+++ b/app/assets/stylesheets/application/share.scss
@@ -12,6 +12,20 @@
 			color: $color-sign !important;
 		}
 	}
+
+	 .sub_menu{
+	 	background:#19B29F;
+	 	border:none;
+	 	border-radius: 0;
+	 	a{
+	 		color: #fff;
+	 		background-color: #19B29F !important;
+	 	}
+	 	a :hover a:focus{
+	 		color: #000;
+	 		background-color:#19B29F!important;
+	 	}
+	 }
 }
 
 //footer
