--- a/app/views/share/_header.html.erb
+++ b/app/views/share/_header.html.erb
@@ -25,11 +25,14 @@
 				<li class="<%= "active" if params[:controller] == '' && params[:action] == ''%>">
 					<a href="#">实训项目</a>
 				</li>
-				<li  class="<%= "active" if params[:controller] == '' && params[:action] == ''%>"><a href="#">实习招聘
+				<li  class="<%= "active" if (params[:controller] == 'recruitments' && 
+				(params[:action] == 'index' || params[:action] == 'show' || params[:action] == 'recommend')) 
+				%>">
+				<a href="<%=recommend_recruitments_path %>">实习招聘
 					<ul class="dropdown-menu sub_menu" >
-					  	<li><a href="#">工作推荐</a></li>
+					  	<li><a href="<%=recommend_recruitments_path %>">工作推荐</a></li>
 					   	<li><a href="<%=recruitments_path %>">招聘信息</a></li>
-					   	<li><a href="#">面试经验</a></li>
+					   	<li><a href="<%=interviews_path %>">面试经验</a></li>
 					    	<li><a href="#">职业测评</a></li>
 				 	</ul>
 				</a></li>
