--- a/app/views/admin/recruitments/edit.html.erb
+++ b/app/views/admin/recruitments/edit.html.erb
@@ -6,7 +6,7 @@
     <a href="<%= admin_recruitments_path%>">招聘列表</a>
   </li>
   <li>
-    <a href="<%= admin_recruitments_path(@recruitment)%>"><%= @recruitment.industry %></a>
+    <a href="<%= admin_recruitments_path(@recruitment)%>"><%= @recruitment.name %></a>
   </li>
   <li class="active">修改</li>
   <hr></hr>
