recruitment show deliver

--- a/app/assets/stylesheets/application/recruitments.css.scss
+++ b/app/assets/stylesheets/application/recruitments.css.scss
@@ -92,25 +92,29 @@
    .divider1 {
     border-width: 2px 0px 0px;
     border-style: dashed none none;
-    border-color:#E9E9E9;
+    border-color: #E9E9E9;
     }
   }
   .btn_tab {
-    .btn_apply {
-      a {
-        display:block;
-        margin-bottom:20px;
-        font-size:20px;
-        color:#fff;
-        background-color:#00C6B8;
+    a.btn_apply {
+      display: block;
+      margin-bottom: 20px;
+      font-size: 20px;
+      color: #fff;
+      background-color: #00C6B8;
+      &.muted {
+        background-color: #ebebeb;
+        color: #9b9898;
       }
     }
-    .btn_collection {
-      a {
-        display:block;
-        font-size:20px;
-        color:#fff;
-        background-color:#FDD900;
+    a.btn_collection {
+      display: block;
+      font-size: 20px;
+      color: #fff;
+      background-color: #FDD900;
+      &.muted {
+        background-color: #ebebeb;
+        color: #9b9898;
       }
     }
   }
