--- a/app/views/user_recruitments/create.js.erb
+++ b/app/views/user_recruitments/create.js.erb
@@ -4,6 +4,8 @@
   <% case params[:style_type] %>
   <% when "recruitment-list" %>
     $("#deliverRecruitment<%= @user_recruitment.recruitment_id%>").replaceWith('<span class="text-muted">已投简历</span>');
-    alert("简历投递成功");
+  <% when "recruitment-show" %>
+    $("#deliverRecruitment<%= @user_recruitment.recruitment_id%>").replaceWith('<%=link_to "已经申请", 'javascript:void(0);' ,class: "btn btn_apply muted", disabled: true %>');
   <% end %>
+  alert("简历投递成功");
 <% end %>
