--- a/app/views/votes/create.js.erb
+++ b/app/views/votes/create.js.erb
@@ -10,8 +10,13 @@
       $("#voteRecruitmentSpan<%= params[:voteable_id]%>").removeClass("glyphicon-star").addClass("glyphicon-star-empty");
       alert("取消收藏成功");
     <% end %>
-  <% end %>
   <% when "recruitment-show" %>
-
+    <% unless @is_like %>
+      $("#collectRecruitment<%= params[:voteable_id]%>").text("取消收藏");
+      alert("收藏成功");
+    <% else %>
+      $("#collectRecruitment<%= params[:voteable_id]%>").text("我要收藏");
+      alert("取消收藏成功");
+    <% end %>
   <% end %>
 <% end %>
