change course form

--- a/app/views/admin/courses/_form.html.erb
+++ b/app/views/admin/courses/_form.html.erb
@@ -79,22 +79,17 @@
 <% end %>
 
 <script type="text/javascript">
+  //逻辑已改成： 课程只属于学校或者分类，其中之一，必须有老师头像
 	$(function(){
 		$("#course_image, #course_attachment").fileinput();
 	});
-	//点击分类时，隐藏学校选择和教师选择
+	//点击分类时，隐藏学校
 	$("#category :radio").click(function(){
 		$("#school").hide();
-		$("#teacher").hide();
 	});
-	//点击学校选择时，隐藏分类学则和教师选择
+	//点击学校选择时，隐藏分类
 	$("#school :radio").click(function(){
 		$("#category").hide();
-		$("#teacher").hide();
 	});
-	//点击教师选择时，隐藏分类选择和学校选择
-	$("#teacher :radio").click(function(){
-		$("#category").hide();
-		$("#school").hide();
-	});
+
 </script>
